test/org/midica/testfiles/failing/eff-flow-broken-by-var.midica
INCLUDE inc/instruments.midica


0: vol.double
VAR $x = y
0: .set(50)

